# fast

./: commands.txt
backend/: .env.example  .gitignore  API.md  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_and_refresh_tokens.py  0002_create_flows_questions_files_ai_models_tokens_chats.py  0003_add_flow_json_question_buttons_customer_ai_model_fk.py  0b8776c6fb60_initial.py
backend/app/: main.py
backend/app/ai/: chat.py  client.py  embeddings.py
backend/app/api/v1/: ai.py  ai_models.py  auth.py  chats.py  customers.py  files.py  flows.py  health.py  public.py  questions.py  router.py  tokens.py  users.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  ai_model.py  chat.py  customer.py  file.py  flow.py  question.py  refresh_token.py  user.py  user_ai_token.py
backend/app/redis/: cache.py  connection.py
backend/app/repositories/: __init__.py  ai_model.py  chat.py  customer.py  file.py  flow.py  question.py  token.py  user.py
backend/app/schemas/: __init__.py  ai.py  ai_model.py  auth.py  chat.py  customer.py  file.py  flow.py  public.py  question.py  token.py  user.py
backend/app/services/: __init__.py  ai.py  auth.py  chat.py  customer.py  file.py  flow.py  public.py  question.py  token.py  user.py
backend/app/utils/: logging.py
backend/tests/: conftest.py  test_auth.py  test_health.py
